reworked Streaming interfaces. Now uses BlockingQueue for streaming models. Generic Interfaces allow flexibility wrt the streamed objects (e.g. datasets instead of models, encapsulated Strings etc.) as well as the way they are streamed. BlockingQueue method can easily be overridden by defining other StreamHandlers. Regular Java I/O Streams are also supported.